--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
   </scm>
 
   <properties>
+    <license.name>AL2</license.name>
     <sonar.pluginName>NDepend</sonar.pluginName>
     <sonar.pluginClass>org.sonar.plugins.ndepend.NdependPlugin</sonar.pluginClass>
     <sonarqube.version>3.7</sonarqube.version>
