--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
       <scope>provided</scope>
       <version>${sonarqube.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>18.0</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
