--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
       <version>18.0</version>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.sonar-plugins.visualstudio</groupId>
+      <artifactId>sonar-visual-studio-plugin</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
       <scope>test</scope>
