Don't embed visualstudio plugin
This will fix 'mvn install'.
Min and max size of the built artifact are modified too
to be more relevant.

Change-Id: If0f426e04398a2dc5309b5d4db891b3dd247b527

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
     <dependency>
       <groupId>org.codehaus.sonar-plugins.visualstudio</groupId>
       <artifactId>sonar-visual-studio-plugin</artifactId>
+      <scope>provided</scope>
       <version>1.1</version>
     </dependency>
     <dependency>
@@ -125,8 +126,8 @@
             <configuration>
               <rules>
                 <requireFilesSize>
-                  <maxsize>42000</maxsize>
-                  <minsize>32</minsize>
+                  <maxsize>60000</maxsize>
+                  <minsize>30000</minsize>
                   <files>
                     <file>${project.build.directory}/${project.build.finalName}.jar</file>
                   </files>
