Add the ability to configure rules file
Allows to specify a rules xml file url to load rules from.

Change-Id: Iacd5f411a1353caff38bcd838649b87f9f3c5a24

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
       <version>${sonarqube.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-vfs2</artifactId>
+      <scope>provided</scope>
+      <version>2.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>18.0</version>
