Activate travis release on signed tags
When a signed tag is pushed on github travis will create
a release on github

Change-Id: Ife73aa4967c15d7480726f8adf66a74944adcce1

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,18 @@
 language: java
+
+
+before_deploy:
+  - cd $TRAVIS_BUILD_DIR
+  - git fetch --tags
+
+
+deploy:
+  provider: releases
+  skip_cleanup: true
+  api_key:
+    secure: Hze64QC7F5SSOVoufSIPtRWb+t6Pzzvx2kJgLtPJYUj87CKOXYzVHVqHuWsa50DPfed9knDnm5nOJawZAxleXG5VxSvBERvSyUNhjNUbDkKson1/TcCl12YM5FcyM2ocsLYe/mc59V3h9LZR2mHDqVj/incxwAIxV/MJIgu5PBg=
+  file: target/sonar-ndepend.jar
+  on:
+    repo: criteo/sonar-ndepend
+    tags: true
+    all_branches: true
